force-app/main/default/objects/Student__c/fields/Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Exam_Status__c</fullName>
    <formula>If( 
 Marks__c &gt;33, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;&quot;), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;) 
)</formula>
    <label>Exam Status</label>
    <type>Text</type>
</CustomField>