force-app/main/default/objects/Student__c/fields/Fees_Status__c.field-meta.xml
<CustomField>
    <fullName>Fees_Status__c</fullName>
    <label>Fees Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment 1</fullName>
            </value>
            <value>
                <fullName>Installment 2</fullName>
            </value>
            <value>
                <fullName>Installment 3</fullName>
            </value>
            <value>
                <fullName>Installment 4</fullName>
            </value>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>