force-app/main/default/objects/Student__c/fields/Google_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Link__c</fullName>
    <formula>HYPERLINK(
&quot;http://news.google.com&quot;&amp;Name, 
&quot;Google Search&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Link</label>
    <type>Text</type>
</CustomField>