force-app/main/default/objects/Student__c/fields/LibraryId__c.field-meta.xml
<CustomField>
    <fullName>LibraryId__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>LibraryId</label>
    <type>AutoNumber</type>
</CustomField>