force-app/main/default/objects/Student__c/validationRules/Admission_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Admission_Date</fullName>
    <active>true</active>
    <errorConditionFormula>if( year(Admission_Date__c ) &lt; year(today())-10, true, false)</errorConditionFormula>
    <errorDisplayField>Admission_Date__c</errorDisplayField>
    <errorMessage>Please enter the date not older than 10 years</errorMessage>
</ValidationRule>