force-app/main/default/objects/Student__c/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS( Student_Email__c , &apos;@gmail.com&apos;))</errorConditionFormula>
    <errorDisplayField>Student_Email__c</errorDisplayField>
    <errorMessage>Email  Format</errorMessage>
</ValidationRule>