force-app/main/default/objects/Student__c/validationRules/Marks.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks</fullName>
    <active>true</active>
    <errorConditionFormula>Marks__c &lt;0 ||  Marks__c &gt;100</errorConditionFormula>
    <errorDisplayField>Marks__c</errorDisplayField>
    <errorMessage>Please Enter Marks Between 0-100</errorMessage>
</ValidationRule>