force-app/main/default/objects/Student__c/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>! REGEX( Name , &quot;[a-z A-Z]+&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please Enter text only, Numbers are not allowed</errorMessage>
</ValidationRule>