force-app/main/default/objects/Student__c/validationRules/Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(  Phone__c , &quot;[0-9]+&quot;)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please Enter Only Numbers</errorMessage>
</ValidationRule>