force-app/main/default/objects/Student__c/listViews/Gender.listView-meta.xml
<ListView>
    <fullName>Gender</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>Gender</label>
</ListView>