force-app/main/default/objects/Student__c/listViews/Parent.listView-meta.xml
<ListView>
    <fullName>Parent</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>Parent</label>
</ListView>